{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 22,
  "lineage": "014b9937-3c2c-c208-87e5-fccf805f7a7c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ecomm-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0763cf792771fe1bd",
            "arn": "arn:aws:ec2:ap-south-1:358218327587:instance/i-06ff61d64867ac2ac",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06ff61d64867ac2ac",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-043ea19ea9172c638",
            "private_dns": "ip-10-0-1-160.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.160",
            "public_ip": "65.2.190.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f46b211267f14e0f",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-06c8f715d01921262"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0be4c9c87cbcb9afe",
            "tags": {
              "Name": "ECOMM"
            },
            "tags_all": {
              "Name": "ECOMM"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06c8f715d01921262"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-http-sg",
            "aws_subnet.ecomm-subnet",
            "aws_vpc.ecomm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ecomm-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:358218327587:internet-gateway/igw-0d9cbdcca7da4eca4",
            "id": "igw-0d9cbdcca7da4eca4",
            "owner_id": "358218327587",
            "tags": {
              "Name": "ECOMM-IGW"
            },
            "tags_all": {
              "Name": "ECOMM-IGW"
            },
            "vpc_id": "vpc-02257bacd6983f415"
          },
          "dependencies": [
            "aws_vpc.ecomm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ecomm-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:358218327587:route-table/rtb-0721294186d93c7b9",
            "id": "rtb-0721294186d93c7b9",
            "owner_id": "358218327587",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d9cbdcca7da4eca4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ECOMM-RT"
            },
            "tags_all": {
              "Name": "ECOMM-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-02257bacd6983f415"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ecomm-igw",
            "aws_vpc.ecomm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ecomm-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0135e7965ef2841a6",
            "route_table_id": "rtb-0721294186d93c7b9",
            "subnet_id": "subnet-0be4c9c87cbcb9afe"
          },
          "dependencies": [
            "aws_route_table.ecomm-rt",
            "aws_subnet.ecomm-subnet",
            "aws_vpc.ecomm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-http-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:358218327587:security-group/sg-06c8f715d01921262",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06c8f715d01921262",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SSH-HTTp_SG",
            "name_prefix": "",
            "owner_id": "358218327587",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-02257bacd6983f415"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecomm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecomm-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:358218327587:subnet/subnet-0be4c9c87cbcb9afe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be4c9c87cbcb9afe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "358218327587",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ECOMM-SUBNET"
            },
            "tags_all": {
              "Name": "ECOMM-SUBNET"
            },
            "vpc_id": "vpc-02257bacd6983f415"
          },
          "dependencies": [
            "aws_vpc.ecomm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecomm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:358218327587:vpc/vpc-02257bacd6983f415",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c464d1413d07c7f3",
            "default_route_table_id": "rtb-0cb92ca3434134ae4",
            "default_security_group_id": "sg-0bb07782d7cb5b9c8",
            "dhcp_options_id": "dopt-0ee1d448ba05f3d95",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02257bacd6983f415",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cb92ca3434134ae4",
            "owner_id": "358218327587",
            "tags": {
              "Name": "ECOMM-VPC"
            },
            "tags_all": {
              "Name": "ECOMM-VPC"
            }
          }
        }
      ]
    }
  ]
}